feat: add swagger for all notes routes
